// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsTile Snapshot - Character  Character with draw status 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(CardContent))>
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <Styled(WithStyles(ForwardRef(Typography)))
          data-test="status"
          status="draw"
          variant="h5"
        >
          draw
        </Styled(WithStyles(ForwardRef(Typography)))>
      </WithStyles(ForwardRef(Grid))>
      <Styled(WithStyles(ForwardRef(Grid)))
        item={true}
        xs={6}
      >
        <img
          alt="vader"
          src="vader.svg"
          width="100%"
        />
      </Styled(WithStyles(ForwardRef(Grid)))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={6}
      >
        <WithStyles(ForwardRef(Typography))
          data-test="details-name"
        >
          test
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={6}
      >
        <WithStyles(ForwardRef(Typography))
          data-test="details-mass"
        >
          Mass: 20
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(CardContent))>
</WithStyles(ForwardRef(Card))>
`;

exports[`DetailsTile Snapshot - Character  Character with looser status 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(CardContent))>
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <Styled(WithStyles(ForwardRef(Typography)))
          data-test="status"
          status="looser"
          variant="h5"
        >
          looser
        </Styled(WithStyles(ForwardRef(Typography)))>
      </WithStyles(ForwardRef(Grid))>
      <Styled(WithStyles(ForwardRef(Grid)))
        item={true}
        xs={6}
      >
        <img
          alt="vader"
          src="vader.svg"
          width="100%"
        />
      </Styled(WithStyles(ForwardRef(Grid)))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={6}
      >
        <WithStyles(ForwardRef(Typography))
          data-test="details-name"
        >
          test
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={6}
      >
        <WithStyles(ForwardRef(Typography))
          data-test="details-mass"
        >
          Mass: 20
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(CardContent))>
</WithStyles(ForwardRef(Card))>
`;

exports[`DetailsTile Snapshot - Character  with winner status 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(CardContent))>
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <Styled(WithStyles(ForwardRef(Typography)))
          data-test="status"
          status="winner"
          variant="h5"
        >
          winner
        </Styled(WithStyles(ForwardRef(Typography)))>
      </WithStyles(ForwardRef(Grid))>
      <Styled(WithStyles(ForwardRef(Grid)))
        item={true}
        xs={6}
      >
        <img
          alt="vader"
          src="vader.svg"
          width="100%"
        />
      </Styled(WithStyles(ForwardRef(Grid)))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={6}
      >
        <WithStyles(ForwardRef(Typography))
          data-test="details-name"
        >
          test
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={6}
      >
        <WithStyles(ForwardRef(Typography))
          data-test="details-mass"
        >
          Mass: 20
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(CardContent))>
</WithStyles(ForwardRef(Card))>
`;

exports[`DetailsTile Snapshot - Starship with draw status 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(CardContent))>
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <Styled(WithStyles(ForwardRef(Typography)))
          data-test="status"
          status="draw"
          variant="h5"
        >
          draw
        </Styled(WithStyles(ForwardRef(Typography)))>
      </WithStyles(ForwardRef(Grid))>
      <Styled(WithStyles(ForwardRef(Grid)))
        item={true}
        xs={6}
      >
        <Styled(img)
          alt="falcon"
          src="falcon.svg"
          width="100%"
        />
      </Styled(WithStyles(ForwardRef(Grid)))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={6}
      >
        <WithStyles(ForwardRef(Typography))
          data-test="details-name"
        >
          test
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={6}
      >
        <WithStyles(ForwardRef(Typography))
          data-test="details-crew"
        >
          Crew: 20
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(CardContent))>
</WithStyles(ForwardRef(Card))>
`;

exports[`DetailsTile Snapshot - Starship with looser status 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(CardContent))>
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <Styled(WithStyles(ForwardRef(Typography)))
          data-test="status"
          status="looser"
          variant="h5"
        >
          looser
        </Styled(WithStyles(ForwardRef(Typography)))>
      </WithStyles(ForwardRef(Grid))>
      <Styled(WithStyles(ForwardRef(Grid)))
        item={true}
        xs={6}
      >
        <Styled(img)
          alt="falcon"
          src="falcon.svg"
          width="100%"
        />
      </Styled(WithStyles(ForwardRef(Grid)))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={6}
      >
        <WithStyles(ForwardRef(Typography))
          data-test="details-name"
        >
          test
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={6}
      >
        <WithStyles(ForwardRef(Typography))
          data-test="details-crew"
        >
          Crew: 20
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(CardContent))>
</WithStyles(ForwardRef(Card))>
`;

exports[`DetailsTile Snapshot - Starship with winner status 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(CardContent))>
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <Styled(WithStyles(ForwardRef(Typography)))
          data-test="status"
          status="winner"
          variant="h5"
        >
          winner
        </Styled(WithStyles(ForwardRef(Typography)))>
      </WithStyles(ForwardRef(Grid))>
      <Styled(WithStyles(ForwardRef(Grid)))
        item={true}
        xs={6}
      >
        <Styled(img)
          alt="falcon"
          src="falcon.svg"
          width="100%"
        />
      </Styled(WithStyles(ForwardRef(Grid)))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={6}
      >
        <WithStyles(ForwardRef(Typography))
          data-test="details-name"
        >
          test
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={6}
      >
        <WithStyles(ForwardRef(Typography))
          data-test="details-crew"
        >
          Crew: 20
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(CardContent))>
</WithStyles(ForwardRef(Card))>
`;
